[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Button/pokeballButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/CardTemplates/background v3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/fffForwardFont-pixelArt.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Button/pokeballButtonClicked.png" type="Texture" id=5]
[ext_resource path="res://Assets/Button/pokeballButtonHover.png" type="Texture" id=6]

[node name="HUD" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
margin_left = 594.0
margin_top = 204.0
margin_right = 922.0
margin_bottom = 354.0
custom_fonts/font = ExtResource( 4 )
text = "Teasddas"

[node name="canvasLayer" type="CanvasLayer" parent="."]

[node name="buttonThree" type="TextureButton" parent="canvasLayer"]
margin_left = 6.0
margin_top = 407.0
margin_right = 37.0
margin_bottom = 438.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="buttonTwo" type="TextureButton" parent="canvasLayer"]
margin_left = 6.0
margin_top = 376.0
margin_right = 37.0
margin_bottom = 407.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="buttonOne" type="TextureButton" parent="canvasLayer"]
margin_left = 6.0
margin_top = 344.0
margin_right = 37.0
margin_bottom = 375.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 4
